fixed height issue on firefox

--- a/src/artsub.css
+++ b/src/artsub.css
@@ -20,7 +20,6 @@
 }
 
 .artwork > img {
-    height: 100%;
     padding: 3%;
 }
 
